package it.polimi.ingsw;

public interface AbleToGetPoints {
    int getPoints();
}
